--- a/WelCareForYou-IT1/WelCareForYou-IT1.csproj
+++ b/WelCareForYou-IT1/WelCareForYou-IT1.csproj
@@ -219,6 +219,7 @@
     <Content Include="Content\images\image_2.jpg" />
     <Content Include="Content\images\image_3.jpg" />
     <Content Include="Content\images\image_4.jpg" />
+    <Content Include="Content\images\sunflower.jpg" />
     <Content Include="Content\js\aos.js" />
     <Content Include="Content\js\bootstrap-datepicker.js" />
     <Content Include="Content\js\bootstrap.min.js" />
